[package]
name = "block-list"
version = "1.0.0"
authors = ["Oliver Brotchie <o.brotchie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.11.4", features = ["blocking"] }
atty = "0.2.14"

[profile.release]
lto = true
panic = "abort"