[package]
name = "block-list"
version = "1.1.0"
description = "A simple tool for updating hosts block-list."
license = "GPL-3.0"
license-file = "LICENSE"
repository = "https://github.com/OliverBrotchie/block-list"
authors = ["Oliver Brotchie <o.brotchie@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
curl = "0.4.38"

[profile.release]
lto = true
panic = "abort"