[package]
name = "block-list"
version = "1.1.4"
description = "A minimalist hosts-based tool for managing block lists and ad-blocking."
license = "GPL-3.0"
repository = "https://github.com/OliverBrotchie/block-list"
keywords = ["hosts", "block","ads","privacy"]
categories = ["command-line-utilities","text-processing"]
authors = ["Oliver Brotchie <o.brotchie@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atty = "0.2.14"
curl = "0.4.38"

[profile.release]
lto = true
panic = "abort"
